@startuml

title __LINNIK_LR5's Class Diagram__\n

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    namespace b {
      class db.BigsalaryEntity {
      }
    }
  }
  

  namespace  {
    namespace b {
      class db.BigshopEntity {
      }
    }
  }
  

  namespace  {
    namespace b {
      class db.CharacteristicEntity {
      }
    }
  }
  

  namespace  {
    namespace b {
      class db.ClientcardEntity {
      }
    }
  }
  

  namespace  {
    namespace b {
      class db.ContactclientEntity {
      }
    }
  }
  

  namespace  {
    namespace b {
      class db.OldstaffEntity {
      }
    }
  }
  

  namespace  {
    namespace b {
      class db.OrderEntity {
      }
    }
  }
  

  namespace  {
    namespace b {
      class db.PositionEntity {
      }
    }
  }
  

  namespace  {
    namespace b {
      class db.ProductEntity {
      }
    }
  }
  

  namespace  {
    namespace b {
      class db.StaffEntity {
      }
    }
  }
  

  namespace  {
    namespace b {
      class db.TradeareaEntity {
      }
    }
  }
  

  namespace  {
    namespace b {
      class db.TypeofpointEntity {
      }
    }
  }
  

  db.OrderEntity o-- db.ClientcardEntity : clientcardByClientCardIdClientCard
  db.StaffEntity o-- db.PositionEntity : positionByPositionIdPosition
  db.TradeareaEntity o-- db.StaffEntity : staffByStaffId
  db.TypeofpointEntity o-- db.CharacteristicEntity : Characteristic_id


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
